--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,24 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="/">Let's Play Tennis</a>
+        </div>
+        <ul class="nav navbar-nav navbar-right">
+          <% if current_user %>
+            <%= link_to " #{current_user.first_name} #{current_user.last_name}", user_path(current_user), class: "navbar-brand" %>
+            <li><%= link_to 'Sign Out', signout_path %></li>
+          <% else %>
+            <li><%= link_to 'Sign Up', signup_path %></li>
+            <li><%= link_to 'Sign In', signin_path %></li>
+          <% end %>
+        </ul>
+      </div>
+    </nav>
+  <div class="container">
+    <%= yield %>
+  </div>
 </body>
 </html>
