fix user sign up form

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,31 @@
   <%= image_tag(@user.avatar_url, class: 'img-responsive', id: 'avatar') %>
 </div>
 <div class="member-info col-md-8">
-  
+  <table class="table table-striped">
+    <tbody>
+      <tr>
+        <td><b>Name: </b><%= @user.first_name %> <%= @user.last_name %></td>
+      </tr>
+      <tr>
+        <td><b>Gender: </b><% if @user.gender == true %>
+            Male
+           <% else %>
+            Female
+           <% end %></td>
+       </tr>
+       <tr>
+         <td><b>Level: </b><%= @user.ability.level %></td>
+       </tr>
+       <tr>
+         <td><b>Email: </b><%= @user.email %></td>
+       </tr>
+       <tr>
+         <td><b>Zip Code: </b><%= @user.zip_code %></td>
+       </tr>
+       <tr>
+         <td><b>About Me: </b><%= @user.bio %></td>
+       </tr>
+    </tbody>
+  </table>
 
 </div>
