--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -17,14 +17,28 @@
   </div>
   <div class="form-group row">
     <div class="field">
+      <%= f.label :gender, :class => 'control-label col-md-2' %>
+      <div class='form-controls col-md-4'>
+        <%= f.select :gender, [['Male', true], ['Female', false]], {},  {class: 'form-control'} %>
+      </div>
+    </div>
+  </div>
+  <div class="form-group row">
+    <div class="field">
       <%= f.label :email, :class => 'control-label col-md-2' %>
-
       <div class='form-controls col-md-4'>
         <%= f.email_field :email, :class => 'form-control' %>
       </div>
     </div>
   </div>
-
+  <div class="form-group row">
+    <div class="field">
+      <%= f.label :zip_code, :class => 'control-label col-md-2' %>
+      <div class='form-controls col-md-4'>
+        <%= f.number_field :zip_code, :class => 'form-control' %>
+      </div>
+    </div>
+  </div>
   <div class="form-group row">
     <div class="field">
       <%= f.label 'About Me', :class => 'control-label col-md-2' %>
