--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -33,9 +33,9 @@
   </div>
   <div class="form-group row">
     <div class="field">
-      <%= f.label :zip_code, :class => 'control-label col-md-2' %>
+      <%= f.label :address, :class => 'control-label col-md-2' %>
       <div class='form-controls col-md-4'>
-        <%= f.number_field :zip_code, :class => 'form-control' %>
+        <%= f.text_area :address, :class => 'form-control' %>
       </div>
     </div>
   </div>
