add bootstrap carousel to homepage

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -8,3 +8,23 @@ body {
 #avatar {
   height: 300px;
 }
+
+.navbar-inverse {
+  background-color: white;
+  border-color: white;
+}
+
+
+.carousel-inner > .item > img {
+  width: 1300px;
+}
+
+.layer {
+  opacity: 0.6;
+  filter: alpha(opacity=40);
+}
+
+.fa {
+  margin-top: 220px;
+  font-size: 50px;
+}
