--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -70,7 +70,7 @@
     <div class="field">
       <%= f.label :ability_id, :class=> 'control-label col-md-2' %>
       <div class='form-controls col-md-4'>
-        <%= f.collection_select :ability_id, Ability.all, :id, :level, {include_blank: false}, {class: 'form-control'} %>
+        <%= f.select :ability, User::ABILITIES , {include_blank: false}, {class: 'form-control'} %>
       </div>
     </div>
   </div>
@@ -90,14 +90,6 @@
        </div>
      </div>
    </div>
-   <div class="form-group row">
-    <div class="field">
-      <%= f.label 'About Me', :class => 'control-label col-md-2' %>
-      <div class='form-controls col-md-4'>
-        <%= f.text_field :bio, :class => 'form-control' %>
-      </div>
-    </div>
-  </div>
   <div class="form-group row">
     <div class="field">
       <%= f.label 'Image', :class => 'control-label col-md-2' %>
