--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,8 +1,10 @@
 @import 'bootstrap';
 @import 'bootstrap-sprockets';
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300);
 
 body {
-  padding-top: 100px;
+
+  font-family: 'Open Sans', sans-serif;
 }
 
 #avatar {
@@ -28,3 +30,77 @@ body {
   margin-top: 220px;
   font-size: 50px;
 }
+
+a:hover {
+  color: black !important;
+}
+
+.section-heading-spacer {
+  float: left;
+  width: 200px;
+  border-top: 3px solid #e7e7e7;
+  margin-top: 0;
+}
+
+.section-title {
+  margin-top: 23px;
+}
+
+.row {
+  margin-top: 50px;
+}
+
+#map-container {
+   height: 320px;
+   border-radius: 16px 16px;
+   border-color: #fff;
+   border-style: solid;
+   box-shadow: 2px 2px 10px #B1B1B1;
+   margin-top: 25px;
+   border-width: 7px;
+ }
+ #map-canvas {
+   height: 300px;
+   width: 100%;
+ }
+ .controls {
+   margin-top: 16px;
+   border: 1px solid transparent;
+   border-radius: 2px 0 0 2px;
+   box-sizing: border-box;
+   -moz-box-sizing: border-box;
+   height: 32px;
+   outline: none;
+   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+ }
+
+ #pac-input {
+   background-color: #fff;
+   font-family: Roboto;
+   font-size: 15px;
+   font-weight: 300;
+   margin-left: 12px;
+   padding: 0 11px 0 13px;
+   text-overflow: ellipsis;
+   width: 400px;
+ }
+
+ #pac-input:focus {
+   border-color: #4d90fe;
+ }
+
+ .pac-container {
+   font-family: Roboto;
+ }
+
+ #type-selector {
+   color: #fff;
+   background-color: #4d90fe;
+   padding: 5px 11px 0px 11px;
+ }
+
+ #type-selector label {
+   font-family: Roboto;
+   font-size: 13px;
+   font-weight: 300;
+ }
