--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -23,13 +23,13 @@
    </div>
   <!-- Controls -->
   <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-    <i class="fa fa-angle-left"></i>
+    <i class="fa fa-angle-left" id="arrow"></i>
   </a>
   <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-    <i class="fa fa-angle-right"></i>
+    <i class="fa fa-angle-right" id="arrow"></i>
   </a>
 </div> <!-- Carousel -->
-  <div class="row">
+  <div class="row" id="map-section" >
     <div class="col-md-4">
       <hr class="section-heading-spacer">
       <h2 class="section-title">Find players close to you.</h2>
@@ -39,8 +39,6 @@
     <head>
       <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
       <meta charset="utf-8">
-
-      <title>Places search box</title>
       <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
       <script>
   // This example adds a search box to a map, using the Google Place Autocomplete
@@ -49,95 +47,43 @@
 
   function initialize() {
 
-
-    var markers = [];
-    var map = new google.maps.Map(document.getElementById('map-canvas'), {
-      mapTypeId: google.maps.MapTypeId.ROADMAP
-    });
-
-    var defaultBounds = new google.maps.LatLngBounds(
-        new google.maps.LatLng(39.739314, -104.988639),
-        new google.maps.LatLng(39.739314, -104.988639));
-    map.fitBounds(defaultBounds);
-
-    // Create the search box and link it to the UI element.
-    var input = /** @type {HTMLInputElement} */(
-        document.getElementById('pac-input'));
-    map.controls[google.maps.ControlPosition.TOP_LEFT].push(input);
-
-    var searchBox = new google.maps.places.SearchBox(
-      /** @type {HTMLInputElement} */(input));
-
-    // [START region_getplaces]
-    // Listen for the event fired when the user selects an item from the
-    // pick list. Retrieve the matching places for that item.
-    google.maps.event.addListener(searchBox, 'places_changed', function() {
-      var places = searchBox.getPlaces();
-
-      if (places.length == 0) {
-        return;
-      }
-      for (var i = 0, marker; marker = markers[i]; i++) {
-        marker.setMap(null);
-      }
-
-      // For each place, get the icon, place name, and location.
-      markers = [];
-      var bounds = new google.maps.LatLngBounds();
-      for (var i = 0, place; place = places[i]; i++) {
-        var image = {
-          url: place.icon,
-          size: new google.maps.Size(71, 71),
-          origin: new google.maps.Point(0, 0),
-          anchor: new google.maps.Point(17, 34),
-          scaledSize: new google.maps.Size(25, 25)
-        };
-
-        // Create a marker for each place.
-        var marker = new google.maps.Marker({
-          map: map,
-          icon: image,
-          title: place.name,
-          position: place.geometry.location
-        });
-
-        markers.push(marker);
-
-        bounds.extend(place.geometry.location);
-      }
-
-      map.fitBounds(bounds);
-    });
-    // [END region_getplaces]
-
-    // Bias the SearchBox results towards places that are within the bounds of the
-    // current map's viewport.
-
-    google.maps.Marker.addListener(map, 'dblclick', function() {
-      map.setZoom(25);
-    });
-
-    google.maps.event.addListener(map, 'bounds_changed', function() {
-      var bounds = map.getBounds();
-      searchBox.setBounds(bounds);
-      map.setZoom(20);
-    });
+    var mapOptions = {
+       center: { lat: 39.744, lng:-105.010},
+       zoom: 12,
+     };
+     var map = new google.maps.Map(document.getElementById('map-canvas'),
+         mapOptions);
 
 
   }
-
   google.maps.event.addDomListener(window, 'load', initialize);
-
-      </script>
+    </script>
       <style>
         #target {
           width: 345px;
         }
       </style>
     </head>
-
-      <input id="pac-input" class="controls" type="text" placeholder="Search Box">
       <div id="map-canvas"></div>
-
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-4 col-md-offset-4">
+      <hr class="section-heading-spacer" id="header">
+      <h2 class="section-title"><center>Get Started</center></h2>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-4 get-started">
+      <h3><center>Create your profile</h3></center>
+      <center><i class="fa fa-user" id="user"></i></center>
+    </div>
+    <div class="col-md-4 get-started">
+      <h3><center>Connect with other players your level in your area</center></h3>
+      <center><i class="fa fa-arrows-h" id="connect"></i></center>
+    </div>
+    <div class="col-md-4 get-started">
+      <h3><center>Play Tennis!</center></h3>
+      <center><%= image_tag("tennis-icon.png", class: "ball-icon") %></center>
     </div>
   </div>
