--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -48,96 +48,44 @@
   // pick list containing a mix of places and predicted search terms.
 
   function initialize() {
-
-
-    var markers = [];
-    var map = new google.maps.Map(document.getElementById('map-canvas'), {
-      mapTypeId: google.maps.MapTypeId.ROADMAP
-    });
-
-    var defaultBounds = new google.maps.LatLngBounds(
-        new google.maps.LatLng(39.739314, -104.988639),
-        new google.maps.LatLng(39.739314, -104.988639));
-    map.fitBounds(defaultBounds);
-
-    // Create the search box and link it to the UI element.
-    var input = /** @type {HTMLInputElement} */(
-        document.getElementById('pac-input'));
-    map.controls[google.maps.ControlPosition.TOP_LEFT].push(input);
-
-    var searchBox = new google.maps.places.SearchBox(
-      /** @type {HTMLInputElement} */(input));
-
-    // [START region_getplaces]
-    // Listen for the event fired when the user selects an item from the
-    // pick list. Retrieve the matching places for that item.
-    google.maps.event.addListener(searchBox, 'places_changed', function() {
-      var places = searchBox.getPlaces();
-
-      if (places.length == 0) {
-        return;
-      }
-      for (var i = 0, marker; marker = markers[i]; i++) {
-        marker.setMap(null);
-      }
-
-      // For each place, get the icon, place name, and location.
-      markers = [];
-      var bounds = new google.maps.LatLngBounds();
-      for (var i = 0, place; place = places[i]; i++) {
-        var image = {
-          url: place.icon,
-          size: new google.maps.Size(71, 71),
-          origin: new google.maps.Point(0, 0),
-          anchor: new google.maps.Point(17, 34),
-          scaledSize: new google.maps.Size(25, 25)
-        };
-
-        // Create a marker for each place.
-        var marker = new google.maps.Marker({
-          map: map,
-          icon: image,
-          title: place.name,
-          position: place.geometry.location
-        });
-
-        markers.push(marker);
-
-        bounds.extend(place.geometry.location);
-      }
-
-      map.fitBounds(bounds);
-    });
-    // [END region_getplaces]
-
-    // Bias the SearchBox results towards places that are within the bounds of the
-    // current map's viewport.
-
-    google.maps.Marker.addListener(map, 'dblclick', function() {
-      map.setZoom(25);
-    });
-
-    google.maps.event.addListener(map, 'bounds_changed', function() {
-      var bounds = map.getBounds();
-      searchBox.setBounds(bounds);
-      map.setZoom(20);
-    });
-
-
+    var mapOptions = {
+      zoom: 10,
+      center: new google.maps.LatLng(39.72, -104.99),
+      disableDefaultUI: true
+    }
+    var map = new google.maps.Map(document.getElementById("map-canvas"),
+         mapOptions);
   }
-
   google.maps.event.addDomListener(window, 'load', initialize);
-
-      </script>
+    </script>
       <style>
         #target {
           width: 345px;
         }
       </style>
     </head>
-
-      <input id="pac-input" class="controls" type="text" placeholder="Search Box">
       <div id="map-canvas"></div>
-
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <div class="header">
+        <center><hr class="section-heading-spacer"></center>
+        <center><h2 id="get-started">Get Started</h2></center>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-4">
+      <center><h3>Create your profile</h3></center>
+      <center><i class="fa fa-user" id="user-icon"></i></center>
+    </div>
+    <div class="col-md-4">
+      <center><h3>Connect with players your level in your area</h3></center>
+      <center><i class="fa fa-arrows-h" id="connect-icon"></i></center>
+    </div>
+    <div class="col-md-4">
+      <center><h3>Play Tennis!</h3></center>
+      <center><%= image_tag("tennis-ball.png", id: "ball-icon") %></center>
     </div>
   </div>
