--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,5 +35,16 @@
         interval: 3000
     })
 </script>
+<footer>
+  <div class="container">
+    <div class="row">
+      <div class="links">
+        <center><%= link_to "About", about_path %>
+        |
+        <%= link_to "Contact", contact_path %>
+      </div>
+    </div>
+  </div>
+</footer>
 </body>
 </html>
