--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,17 +18,21 @@
            <% end %></td>
        </tr>
        <tr>
-
+         <td><b>Address: </b><%= @user.address %></td>
+       </tr>
        </tr>
        <tr>
          <td><b>Email: </b><%= @user.email %></td>
        </tr>
        <tr>
-    
        </tr>
        <tr>
          <td><b>About Me: </b><%= @user.bio %></td>
        </tr>
+       <tr>
+         <td><b>Ability: </b><%= @user.ability %></td>
+       </tr>
+
     </tbody>
   </table>
 
