--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -39,7 +40,7 @@
   <div class="container">
     <div class="row">
       <div class="links">
-        <center><%= link_to "About", about_path %>
+        <%= link_to "About", about_path %>
         |
         <%= link_to "Contact", contact_path %>
       </div>
