--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -54,7 +54,7 @@
     <div class="field">
       <%= f.label 'About Me', :class => 'control-label col-md-2' %>
       <div class='form-controls col-md-4'>
-        <%= f.text_field :bio, :class => 'form-control' %>
+        <%= f.text_area :bio, :class => 'form-control' %>
       </div>
     </div>
   </div>
@@ -90,14 +90,6 @@
        </div>
      </div>
    </div>
-  <div class="form-group row">
-    <div class="field">
-      <%= f.label 'Image', :class => 'control-label col-md-2' %>
-      <div class='form-controls col-md-4'>
-        <%= f.file_field :avatar %>
-      </div>
-    </div>
-  </div>
   <div class="form-group row">
     <div class="col-md-offset-2 col-md-4">
       <%= f.submit :class => 'btn btn-primary'%>
