add users index

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -53,10 +53,13 @@
     }
     var map = new google.maps.Map(document.getElementById("map-canvas"),
         mapOptions);
+
         <% @users.each do |user| %>
+
           var marker = new google.maps.Marker({
           position: new google.maps.LatLng(<%= user.latitude %>, <%= user.longitude %>),
-          map: map,
+          map: map
+
     });
     marker.setMap(map);
         <% end %>
@@ -83,11 +86,11 @@
   </div>
   <div class="row" id="get-started">
     <div class="col-md-4">
-      <center><h3>Create your profile</h3></center>
+      <center><h3><%= link_to 'Create your profile', signup_path %></h3></center>
       <center><i class="fa fa-user" id="user-icon"></i></center>
     </div>
     <div class="col-md-4">
-      <center><h3>Connect with players your level in your area</h3></center>
+      <center><h3><%= link_to 'Connect with players your level in your area', users_path %></h3></center>
       <center><i class="fa fa-arrows-h" id="connect-icon"></i></center>
     </div>
     <div class="col-md-4">
