add users index

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -182,3 +182,11 @@ a:hover {
 .page-header {
   border: none;
 }
+
+.user-info {
+  margin-top: 45px;
+}
+
+#user-heading {
+  margin-left: 75px;
+}
