--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,7 +12,7 @@ body {
   margin-right: auto;
 }
 
-.links a {
+a {
   color: inherit;
 }
 
@@ -135,6 +135,7 @@ a:hover {
 
 #get-started {
   margin-top: 15px;
+  margin-right: 15px;
 }
 
 #user-icon {
@@ -189,4 +190,8 @@ a:hover {
 
 #user-heading {
   margin-left: 75px;
+}
+
+#map-canvas-page {
+  height: 700px;
 }
