--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,7 @@
+<div class=page-header>
+  <%= link_to 'See Map', map_path, class: 'pull-right' %>
+  <h1>Players</h1>
+</div>
 <% @users.each do |user| %>
   <div class="col-md-4">
     <center><%= image_tag(user.avatar_url, class: 'img-responsive', id: 'avatar') %></center>
