--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -195,3 +195,10 @@ a:hover {
 #map-canvas-page {
   height: 700px;
 }
+
+#pac-input {
+  margin-top: 22px;
+  padding: 10px;
+  margin-left: 0;
+  width: 350px;
+}
