--- a/app/views/welcome/map.html.erb
+++ b/app/views/welcome/map.html.erb
@@ -7,7 +7,7 @@ function initialize() {
     center: new google.maps.LatLng(39.72, -104.99),
     disableDefaultUI: true
   }
-  var map = new google.maps.Map(document.getElementById("map-canvas"),
+  var map = new google.maps.Map(document.getElementById("map-canvas-page"),
       mapOptions);
 
       <% @users.each do |user| %>
@@ -22,7 +22,7 @@ function initialize() {
   // Create the search box and link it to the UI element.
   var input = /** @type {HTMLInputElement} */(
       document.getElementById('pac-input'));
-  map.controls[google.maps.ControlPosition.TOP_LEFT].push(input);
+
 
   var searchBox = new google.maps.places.SearchBox(
     /** @type {HTMLInputElement} */(input));
@@ -31,6 +31,14 @@ function initialize() {
   // Listen for the event fired when the user selects an item from the
   // pick list. Retrieve the matching places for that item.
   google.maps.event.addListener(searchBox, 'places_changed', function() {
+    $.ajax({
+      url: '/locations',
+      method: 'POST',
+      data: {location: {address: $('#pac-input').val()}},
+      success: function() {
+        console.log('hello');
+      }
+    })
     var places = searchBox.getPlaces();
 
     if (places.length == 0) {
@@ -75,19 +83,23 @@ function initialize() {
     var bounds = map.getBounds();
     searchBox.setBounds(bounds);
   });
+
+  google.maps.event.addListener(marker, 'click', function() {
+   map.setZoom(8);
+   map.setCenter(marker.getPosition());
+ });
 }
 
 google.maps.event.addDomListener(window, 'load', initialize);
 
-    </script>
-    <style>
-      #target {
-        width: 345px;
-      }
-    </style>
-  </head>
-  <body>
-    <input id="pac-input" class="controls" type="text" placeholder="Search Box">
-    <div id="map-canvas"></div>
-  </body>
+</script>
+</head>
+<body>
+  <div class="col-md-4">
+    <input id="pac-input" class="controls" type="text" placeholder="Find players in your area...">
+  </div>
+  <div class="col-md-8">
+    <div id="map-canvas-page"></div>
+  </div>
+</body>
 </html>
