--- a/app/views/welcome/map.html.erb
+++ b/app/views/welcome/map.html.erb
@@ -1,23 +1,13 @@
 <html>
+<head>
 </head>
-<body>
-  <div class="col-md-4">
-    <input id="pac-input" class="controls" type="text" placeholder="Find players in your area...">
-    <br><br>
-    <% @users.each do |user| %>
-      <p><%= user.full_name %></p>
-      <p><%= user.address %></p>
-      <p><%= user.email %><p>
-    <% end %>
-    <br><br>
-  </div>
-  <div class="col-md-8">
-    <div id="map-canvas-page"></div>
-  </div>
 <script>
+
+var markers = [];
+
 function initialize() {
 
-  var markers = [];
+
   var mapOptions = {
     zoom: 10,
     center: new google.maps.LatLng(39.72, -104.99),
@@ -26,16 +16,18 @@ function initialize() {
   var map = new google.maps.Map(document.getElementById("map-canvas-page"),
       mapOptions);
 
+// Create marker for each user
       <% @users.each do |user| %>
-
-        var marker = new google.maps.Marker({
-        position: new google.maps.LatLng(<%= user.latitude %>, <%= user.longitude %>),
-        map: map
-        id: user.id 
-
-  });
-  marker.setMap(map);
+          var marker = new google.maps.Marker({
+            position: new google.maps.LatLng(<%= user.latitude %>, <%= user.longitude %>),
+            map: map
+          });
+          marker.id = <%= user.id %>
+          marker.setMap(map);
+          markers.push(marker);
       <% end %>
+
+
   // Create the search box and link it to the UI element.
   var input = /** @type {HTMLInputElement} */(
       document.getElementById('pac-input'));
@@ -52,9 +44,6 @@ function initialize() {
       url: '/locations',
       method: 'POST',
       data: {location: {address: $('#pac-input').val()}},
-      success: function() {
-        console.log('hello');
-      }
     })
     var places = searchBox.getPlaces();
 
@@ -66,7 +55,6 @@ function initialize() {
     }
 
     // For each place, get the icon, place name, and location.
-    markers = [];
     var bounds = new google.maps.LatLngBounds();
     for (var i = 0, place; place = places[i]; i++) {
       var image = {
@@ -105,9 +93,45 @@ function initialize() {
    map.setZoom(8);
    map.setCenter(marker.getPosition());
  });
+
+
+
+}
+
+
+function changeMarker(id) {
+  var icon = new google.maps.MarkerImage({ url:"http://chart.apis.google.com/chart?chst=d_map_pin_letter&chld=1|ffffff|c41200"});
+  var marker = markers.map(function(x) {if(x.id = id) {return x}} );
+  marker.setIcon(icon);
 }
 
 google.maps.event.addDomListener(window, 'load', initialize);
+
+
+
+var users = document.getElementsByClassName("user");
+
+for(var i = 0; i < users.length; i++ ) {
+  users[i].addEventListener("mouseover", changeMarker(users[i].id), false);
+}
+
+
 </script>
+<body>
+  <div class="col-md-4">
+    <input id="pac-input" class="controls" type="text" placeholder="Find players in your area...">
+    <br><br>
+    <% @users.each do |user| %>
+      <div id="<%= user.id %>" class="user">
+        <%= link_to(user.full_name, user_path(user)) %><br>
+        <%= user.address %><br>
+        <%= user.email %><br><br>
+      </div>
+    <% end %>
+  </div>
+  <div class="col-md-8">
+    <div id="map-canvas-page"></div>
+  </div>
+
 </body>
 </html>
