--- a/app/views/welcome/map.html.erb
+++ b/app/views/welcome/map.html.erb
@@ -5,11 +5,13 @@
     <input id="pac-input" class="controls" type="text" placeholder="Find players in your area...">
     <br><br>
     <% @users.each do |user| %>
-      <p><%= user.full_name %></p>
-      <p><%= user.address %></p>
-      <p><%= user.email %><p>
+    <div class="user">
+      <%= user.full_name %><br>
+      <%= user.address %>
+      Send Message: <%= mail_to "#{user.email}" %>
+      <br><br>
+    </div>
     <% end %>
-    <br><br>
   </div>
   <div class="col-md-8">
     <div id="map-canvas-page"></div>
