--- a/app/views/welcome/map.html.erb
+++ b/app/views/welcome/map.html.erb
@@ -24,7 +24,7 @@ function initialize() {
           });
           marker.id = <%= user.id %>
           marker.setMap(map);
-          markers.push(marker);
+          markers.push(marker)
       <% end %>
 
 
@@ -101,7 +101,8 @@ function initialize() {
 
 function changeMarker(id) {
   var icon = new google.maps.MarkerImage({ url:"http://chart.apis.google.com/chart?chst=d_map_pin_letter&chld=1|ffffff|c41200"});
-  var marker = markers.map(function(x) {if(x.id = id) {return x}} );
+  var marker = $.grep(markers, function(e){ return e.id == id; });
+  debugger
   marker.setIcon(icon);
 }
 
@@ -109,11 +110,10 @@ google.maps.event.addDomListener(window, 'load', initialize);
 
 
 
-var users = document.getElementsByClassName("user");
-
-for(var i = 0; i < users.length; i++ ) {
-  users[i].addEventListener("mouseover", changeMarker(users[i].id), false);
-}
+// var users = document.getElementsByClassName("user");
+// for(var i = 0; i < users.length; i++ ) {
+//   users[i].addEventListener("mouseover", changeMarker(users[i].id), false);
+// }
 
 
 </script>
@@ -122,7 +122,7 @@ for(var i = 0; i < users.length; i++ ) {
     <input id="pac-input" class="controls" type="text" placeholder="Find players in your area...">
     <br><br>
     <% @users.each do |user| %>
-      <div id="<%= user.id %>" class="user">
+      <div id="<%= user.id %>" class="user" onmouseover="changeMarker(<%= user.id %>)">
         <%= link_to(user.full_name, user_path(user)) %><br>
         <%= user.address %><br>
         <%= user.email %><br><br>
