--- a/app/views/welcome/messages.html.erb
+++ b/app/views/welcome/messages.html.erb
@@ -11,9 +11,11 @@
     <%= f.submit 'Post Message', id: 'post-message' %>
   <% end %>
 </div>
-<div class="col-md-3">
-</div>
-<div class="col-md-3">
-</div>
-<div class="col-md-3">
+<div class="messages">
+  <div class="col-md-3">
+  </div>
+  <div class="col-md-3">
+  </div>
+  <div class="col-md-3">
+  </div>
 </div>
