--- a/app/views/welcome/messages.html.erb
+++ b/app/views/welcome/messages.html.erb
@@ -1,5 +1,5 @@
 <div class="col-md-3 message-form">
-  <%= form_for(@message, remote: true) do |f| %>
+  <%= form_for(@message) do |f| %>
     <div class="form-group">
       <%= f.label :email %>
       <%= f.text_field :email, class: 'form-control'%>
@@ -12,10 +12,10 @@
   <% end %>
 </div>
 <div class="messages">
-  <div class="col-md-3">
+  <div class="col-md-3 left">
   </div>
-  <div class="col-md-3">
+  <div class="col-md-3 middle">
   </div>
-  <div class="col-md-3">
+  <div class="col-md-3 right">
   </div>
 </div>
