fix ajax request to post messages

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -212,3 +212,9 @@ a:hover {
 .message-form {
   border-right: solid 1px;
 }
+
+.message {
+  margin-left: 10px;
+  height: 197px;
+  background-color: #FFFFA4;
+}
