--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -215,6 +215,17 @@ a:hover {
 
 .message {
   margin-left: 10px;
-  height: 197px;
+  height: 193px;
   background-color: #FFFFA4;
+  box-shadow: 5px 5px 5px #888888;
+  width: 24%;
+  margin-bottom: 10px;
+}
+
+.message p {
+  padding-top: 25px;
+}
+
+.blank_message {
+  height: 193px;
 }
