add fade in to messages

--- a/app/views/welcome/messages.html.erb
+++ b/app/views/welcome/messages.html.erb
@@ -1,3 +1,6 @@
+<div class="page-header">
+  <h1>Community Board</h1>
+</div>
 <div class="col-md-3 message-form">
   <%= form_for(@message) do |f| %>
     <div class="form-group">
