--- a/app/views/users/match.html.erb
+++ b/app/views/users/match.html.erb
@@ -1,3 +1,8 @@
 <%   @matches_10miles.each do |match| %>
 <%= match.full_name %>
 <% end %>
+
+20 MILES
+<% @matches_20miles.each do |match| %>
+<%= match.full_name %>
+<% end %>
