--- a/app/views/users/match.html.erb
+++ b/app/views/users/match.html.erb
@@ -1,6 +1,22 @@
-<%   @matches_10miles.each do |match| %>
-<%= match.full_name %>
+<div class="page-header">
+  <h1>Players in Your Area</h1>
+</div>
+<div class="col-md-3">
+  <h3>Within 10 Miles</h3>
+</div>
+<% @matches_10miles.each do |match| %>
+  <% if (@matches_10miles.index(match) - 1) % 4 == 0 %>
+    <div class="col-md-3 blank_match">BLANK</div>
+  <% else %>
+    <div class="col-md-3 match">
+      <%= image_tag(match.avatar_url, class: 'thumbnail') %>
+      <%= match.full_name %>
+      <%= match.ability %>
+      <%= mail_to match.email %>
+    </div>
+  <% end %>
 <% end %>
+
 
 20 MILES
 <% @matches_20miles.each do |match| %>
