--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,12 +33,13 @@
       </div>
     </nav>
   <div class="container">
-    <% if notice %>
-      <%= notice %>
-    <% end %>
     <% if alert %>
-      <div class="alert"><%= alert %></div>
+      <div class="alert alert-danger"><%= alert %></div>
     <% end %>
+    <% if notice %>
+      <div class="alert alert-success" id="notice"><%= notice %></div>
+    <% end %>
+
 
     <%= yield %>
   </div>
