--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -68,7 +68,7 @@
   </div>
   <div class="form-group row">
     <div class="field">
-      <%= f.label :ability_id, :class=> 'control-label col-md-2' %>
+      <%= f.label :ability_id, 'Level', :class=> 'control-label col-md-2' %>
       <div class='form-controls col-md-4'>
         <%= f.select :ability, User::ABILITIES , {include_blank: false}, {class: 'form-control'} %>
       </div>
