add logic in user controller to match by ability

--- a/app/views/users/match.html.erb
+++ b/app/views/users/match.html.erb
@@ -30,3 +30,8 @@
     </div>
   </div>
 <% end %>
+<center><h2>Within Twenty Miles</h2></center>
+<center><h2>Players at Your Level</h2></center>
+<% @matches_ability.each do |match| %>
+<%= match.full_name %>
+<% end %>
