change name of app to ProMatch

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -32,7 +32,7 @@
     <div class="col-md-4">
       <hr class="section-heading-spacer">
       <h2 class="section-title">Find players close to you.</h2>
-      <p class="lead">Let's Play Tennis is a community of tennis players. Meet other players at your level and in your area and schedule time to play at your convenience.</p>
+      <p class="lead">ProMatch is a community of tennis players. Meet other players at your level and in your area and schedule time to play at your convenience.</p>
     </div>
     <div class="col-md-8">
 
