--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -10,7 +10,7 @@
      <div class="item active">
       <%= image_tag("ball.jpg", class: 'layer') %>
        <div class="carousel-caption">
-           <h2>Let us find you tennis partners in your area.</h2>
+           <h2>Find local tennis partners</h2>
        </div>
      </div>
      <div class="item">
@@ -28,65 +28,21 @@
     <i class="fa fa-angle-right" id="arrow"></i>
   </a>
 </div> <!-- Carousel -->
-  <div class="row homepage" id="map-section" >
-    <div class="col-md-4">
-      <hr class="section-heading-spacer">
-      <h2 class="section-title">Find players close to you.</h2>
-      <p class="lead">ProMatch is a community of tennis players. Meet other players at your level and in your area and schedule time to play at your convenience.</p>
-    </div>
-    <div class="col-md-8">
-
-<script>
-  function initialize() {
-    var mapOptions = {
-      zoom: 10,
-      center: new google.maps.LatLng(39.72, -104.99),
-      disableDefaultUI: true
-    }
-    var map = new google.maps.Map(document.getElementById("map-canvas"),
-        mapOptions);
-
-        <% @users.each do |user| %>
-
-          var marker = new google.maps.Marker({
-          position: new google.maps.LatLng(<%= user.latitude %>, <%= user.longitude %>),
-          map: map
-
-    });
-    marker.setMap(map);
-        <% end %>
-    }
-
-  google.maps.event.addDomListener(window, 'load', initialize);
-
-    </script>
-      <style>
-        #target {
-          width: 345px;
-        }
-      </style>
-    </head>
-      <div id="map-canvas"></div>
-    </div>
+<div class="col-md-10 col-md-offset-1 about clearfix">
+  <h2>ProMatch is where you can find your tennis community.</h2>
+  <p class="lead">Let us match you with players in your area as well as at your level.</p>
+</div>
+<div class="row clearfix features">
+  <div class="col-md-3">
+    Sign Up
   </div>
-  <div class="row homepage">
-    <div class="col-md-6 col-md-offset-3">
-      <div class="header">
-        <center><hr class="section-heading-spacer"></center>
-        <center><h2 id="get-started">Get Started</h2></center>
-      </div>
-    </div>
+  <div class="col-md-3">
+    Find Matches
   </div>
-  <div class="row" id="get-started">
-    <div class="col-md-4">
-      <center><h3><%= link_to 'Create your profile', signup_path %></h3></center>
-      <center><i class="fa fa-user" id="user-icon"></i></center>
-    </div>
-    <div class="col-md-4">
-      <center><h3><%= link_to 'Connect with players your level in your area', users_path %></h3></center>
-      <center><i class="fa fa-arrows-h" id="connect-icon"></i></center>
-    </div>
-    <div class="col-md-4">
-      <center><h3>Play Tennis!</h3></center>
-      <center><%= image_tag("tennis-ball.png", id: "ball-icon") %></center>
-    </div>
+  <div class="col-md-3">
+    Check Out the Map
+  </div>
+  <div class="col-md-3">
+    Reach Out
+  </div>
+</div>
