--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -33,16 +33,17 @@
   <p class="lead">Let us match you with players in your area as well as at your level.</p>
 </div>
 <div class="row clearfix features">
-  <div class="col-md-3">
-    Sign Up
+  <div class="col-md-3 feature" id="sign_up">
+    <p>Sign Up</p>
+    <%= image_tag('keyboard.jpg', size: '265x265', id: 'keyboard') %>
   </div>
-  <div class="col-md-3">
-    Find Matches
+  <div class="col-md-3 feature">
+    <%= image_tag('keyboard.jpg', size: '265x265') %>
   </div>
-  <div class="col-md-3">
-    Check Out the Map
+  <div class="col-md-3 feature">
+    <%= image_tag('keyboard.jpg', size: '265x265') %>
   </div>
-  <div class="col-md-3">
-    Reach Out
+  <div class="col-md-3 feature">
+    <%= image_tag('keyboard.jpg', size: '265x265') %>
   </div>
 </div>
