--- a/app/views/welcome/map.html.erb
+++ b/app/views/welcome/map.html.erb
@@ -15,7 +15,7 @@ function initialize() {
   var map = new google.maps.Map(document.getElementById("map-canvas-page"),
       mapOptions);
 
-// Create marker for each user
+  // Create marker for each user
       <% @users.each do |user| %>
           var marker = new google.maps.Marker({
             position: new google.maps.LatLng(<%= user.latitude %>, <%= user.longitude %>),
@@ -112,12 +112,24 @@ function initialize() {
 
 
 
-function changeMarker(id) {
+function changeMarker(latitude, longitude) {
   // var icon = new google.maps.MarkerImage({ url:"http://chart.apis.google.com/chart?chst=d_map_pin_letter&chld=1|ffffff|c41200"});
-  var marker = $.grep(markers, function(e){ return e.id == id; });
+  // var marker = $.grep(markers, function(e){ return e.id == id; });
   // marker.setIcon(icon);
-  styleIcon.set("color","#0033CC");
-  // console.log('HI');
+  var mapOptions = {
+    zoom: 16,
+    center: new google.maps.LatLng(latitude, longitude),
+    disableDefaultUI: true
+  }
+  var map = new google.maps.Map(document.getElementById("map-canvas-page"),
+    mapOptions);
+  var marker = new google.maps.Marker({
+    position: new google.maps.LatLng(latitude, longitude),
+    map: map,
+    icon: 'http://maps.google.com/mapfiles/ms/icons/green-dot.png',
+  });
+  console.log('HI');
+
 }
 
 
@@ -135,7 +147,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
     <input id="pac-input" class="controls" type="text" placeholder="Find players in your area...">
     <br><br>
     <% @users.each do |user| %>
-      <div id="<%= user.id %>" class="user" >
+      <div id="<%= user.id %>" class="user" onmouseover="changeMarker(<%= user.latitude %>, <%= user.longitude %>)">
         <%= link_to(user.full_name, user_path(user)) %><br>
         <%= user.address %><br>
         <%= user.email %><br><br>
