--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,28 +10,41 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
   <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <%= csrf_meta_tags %>
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
   <meta charset="utf-8">
   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="/">ProMatch</a>
-        </div>
-        <ul class="nav navbar-nav navbar-right">
-          <% if current_user %>
-            <%= link_to " #{current_user.first_name} #{current_user.last_name}", user_path(current_user), class: "navbar-brand" %>
-            <li><%= link_to 'Sign Out', signout_path %></li>
-          <% else %>
-            <li><%= link_to 'Sign Up', signup_path %></li>
-            <li><%= link_to 'Sign In', signin_path %></li>
-          <% end %>
-        </ul>
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="/">ProMatch</a>
       </div>
-    </nav>
+      <% if current_user %>
+        <ul class="nav navbar-nav">
+          <li class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false">
+          <i class="fa fa-bars"></i></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><%= link_to 'Matches', matches_path %></li>
+              <li><%= link_to 'Map', map_path %></li>
+              <li><%= link_to 'Message Board', messages_path %></li>
+            </ul>
+          </li>
+        </ul>
+      <% end %>
+      <ul class="nav navbar-nav navbar-right">
+        <% if current_user %>
+          <li><%= link_to " #{current_user.first_name} #{current_user.last_name}", user_path(current_user) %></li>
+          <li><%= link_to 'Sign Out', signout_path %></li>
+        <% else %>
+          <li><%= link_to 'Sign Up', signup_path %></li>
+          <li><%= link_to 'Sign In', signin_path %></li>
+        <% end %>
+      </ul>
+    </div>
+  </nav>
   <div class="container">
     <% if alert %>
       <div class="alert alert-danger"><%= alert %></div>
