--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -28,7 +28,7 @@
     <i class="fa fa-angle-right" id="arrow"></i>
   </a>
 </div> <!-- Carousel -->
-<div class="col-md-10 col-md-offset-1 about clearfix">
+<div class="col-md-12 about clearfix">
   <h2>ProMatch is where you can find your tennis community.</h2>
   <p class="lead">Let us match you with players in your area and at your level.</p>
 </div>
@@ -38,7 +38,7 @@
     <%= image_tag('keyboard.jpg', size: '265x265', id: 'keyboard') %>
   </div>
   <div class="col-md-3 feature">
-    <p class="lead"><%= link_to 'See Your Matches', match_path %></p>
+    <p class="lead"><%= link_to 'See Your Matches', matches_path %></p>
   </div>
   <div class="col-md-3 feature">
     <p class="lead"><%= link_to 'Explore Our Map', map_path %></p>
