--- a/app/views/welcome/messages.html.erb
+++ b/app/views/welcome/messages.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <h1>Community Board</h1>
+  <h1>Message Board</h1>
 </div>
 <div class="col-md-3 message-form">
   <%= form_for(@message) do |f| %>
