--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -28,13 +28,15 @@
     <i class="fa fa-angle-right" id="arrow"></i>
   </a>
 </div> <!-- Carousel -->
+
 <div class="col-md-12 about clearfix">
+  <hr>
   <h2>ProMatch is where you can find your tennis community.</h2>
   <p class="lead">Let us match you with players in your area and at your level.</p>
 </div>
 <div class="row clearfix features">
   <div class="col-md-3 feature" id="sign_up">
-    <p class="lead" id="sign_up_text">Sign Up</p>
+    <center><h2 id="sign_up_text">Sign Up</h2></center>
     <%= image_tag('keyboard.jpg', size: '265x265', id: 'keyboard') %>
   </div>
   <div class="col-md-3 feature">
