--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
       <% if current_user %>
         <ul class="nav navbar-nav">
           <li class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false">
-          <i class="fa fa-bars"></i></a>
+          <i id="menu" class="fa fa-bars"></i></a>
             <ul class="dropdown-menu" role="menu">
               <li><%= link_to 'Matches', matches_path %></li>
               <li><%= link_to 'Map', map_path %></li>
